# upc-fib-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
docs/: 00_summary.md  agent_tool_analysis.md  assignatures.md  aules.md  examens.md  noticies.md  professors.md  public_endpoints.json  quadrimestres.md
docs/presentation/: generate_images.py  prompts.json  render_slides.sh  slides.tex
docs/report/: README.md  build.sh  main.tex  preamble.tex  references.bib
evaluation/: README.md  analysis_script.py  compare.html  visualize.html
evaluation/dataset/: README.md  metrics.json  questions.json
evaluation/results/: evaluation_ChatLlamaCppTools_llama-3.2-3b-instruct_20251229_174943_20251229_203712.json  evaluation_ChatLlamaCppTools_qwen2.5-7b-instruct_20251229_123803_20251229_204708.json  evaluation_gemini-2.5-flash_20251214_172328_20251214_181109.json  evaluation_gemini-2.5-flash_20251214_203614_20251214_204533.json  evaluation_gemini-2.5-pro_20251214_193146_20251214_200438.json  evaluation_gemini-2.5-pro_20251214_210250_20251214_212213.json  evaluation_gemini-3-flash-preview_20260107_152906_20260107_160406.json  evaluation_llama-3.2-3b-instruct_20251229_133902_20251229_202745.json  evaluation_qwen2.5-7b-instruct_20251229_130819_20251229_205947.json  inference_gemini-2.5-flash_20251214_172328.json  inference_gemini-2.5-flash_20251214_203614.json  inference_gemini-2.5-pro_20251214_193146.json  inference_results.json  (+6 more)
scripts/: README.md  authenticate.py  explore_fib_api.py  run_eval_inference.py  run_eval_metrics.py
tmp/: claude_desktop_config.json
(+35 files in other folders)
